ui/src/sass/_tool-tip.scss
// _tool-tip.scss

/* Tooltip container */
.tool-tip {
    position: relative;
    display: inline-block;
    /* If you want dots under the hoverable text */
    border-bottom: 1px dotted black;

    /* Tooltip text */
    .tool-tip--content {
        visibility: hidden;
        width: 40em;
        background-color: #555;
        color: #fff;
        text-align: center;
        padding: 5px 0;
        border-radius: 6px;

        /* Position the tooltip text */
        position: absolute;
        z-index: 1;
        bottom: 125%;
        left: 50%;
        margin-left: -20em;

        /* Fade in tooltip */
        opacity: 0;
        transition: opacity 0.3s;
    }

    /* Tooltip arrow */
    .tool-tip--content::after {
        content: "";
        position: absolute;
        top: 100%;
        left: 50%;
        margin-left: -5px;
        border-width: 5px;
        border-style: solid;
        border-color: #555 transparent transparent transparent;
    }

    /* Show the tooltip text when you mouse over the tooltip container */
    &:hover .tool-tip--content {
        visibility: visible;
        opacity: 0.9;
    }
}

